welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (cigar<=40){
		if (isWeekend == false && 60<=cigars){
			false
		}
		true
	}
	false
}
